--- a/_config.yml
+++ b/_config.yml
@@ -30,10 +30,12 @@ twitter_username: jekyllrb
 github_username:  jekyll
 
 # Build settings
-theme: minima
-plugins:
-  - jekyll-feed
+remote_theme: "mmistakes/minimal-mistakes@4.20.1"
 
+plugins:
+  - jekyll-include-cache
+  - jekyll-feed
+                         
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
